# python-package-manager-energy-benchmark

./: .gitignore  README.md  analysis.ipynb  analyze.py  benchmark.py  energy_meter.py  requirements-analysis.txt
results/: pip_cold_darwin_arm64_20260227_002225.csv  pip_cold_darwin_arm64_20260227_004417.csv  pip_cold_darwin_arm64_20260227_012212.meta.csv  pip_cold_darwin_arm64_20260227_012636.meta.csv  pip_cold_darwin_arm64_20260227_024344.meta.csv  pip_cold_darwin_arm64_20260227_031105.meta.csv  pip_cold_darwin_arm64_20260227_032429.meta.csv  pip_cold_darwin_arm64_20260227_034850.meta.csv  pip_cold_darwin_arm64_20260227_041916.meta.csv  pip_cold_darwin_arm64_20260227_045033.csv  pip_cold_darwin_arm64_20260227_045033.meta.csv  pip_cold_darwin_arm64_20260227_052742.csv  pip_cold_darwin_arm64_20260227_052742.meta.csv  pip_cold_darwin_arm64_20260227_053143.csv  pip_cold_darwin_arm64_20260227_053916.meta.csv  pip_cold_darwin_arm64_20260227_054319.csv  pip_cold_darwin_arm64_20260227_054918.csv  pip_cold_darwin_arm64_20260227_065220.csv  pip_cold_darwin_arm64_20260227_065220.meta.csv  pip_cold_darwin_arm64_20260227_070021.csv  pip_cold_darwin_arm64_20260227_070021.meta.csv  pip_cold_darwin_arm64_20260227_080335.csv  pip_cold_darwin_arm64_20260227_080335.meta.csv  pip_cold_darwin_arm64_20260227_080743.csv  pip_cold_darwin_arm64_20260227_081714.csv  pip_lock_darwin_arm64_20260227_000606.meta.csv  pip_lock_darwin_arm64_20260227_000945.csv  pip_lock_darwin_arm64_20260227_000945.meta.csv  (+223 more)
scripts/: run_all.sh  (+4 more)
workload/: pyproject.toml  requirements.in  requirements.txt
(+612 files in other folders)
